applications/intelliflow/intelliflow-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: intelliflow-app-svc
  namespace: control-plane
spec:
  type: ClusterIP
  selector:
    app: intelliflow-app
  ports:
    - protocol: TCP
      port: 80
      # targetPort: 31523
      # nodePort: 31523
